# webrtc_streamer

./: .gitignore  CMakeLists.txt  CONFIG.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  RECEIVER_GUIDE.md  WEBRTC_H265_GUIDE.md  WEBSOCKET_GUIDE.md  config.example.json  receiver_demo.py  receiver_web.html
config/: config.json
include/: config_parser.h  custom_video_source.h  h265_decoder.h  h265_encoder.h  opencv_source.h  realsense_source.h  simple_video_codec_factory.h  video_source.h  webrtc_client.h
scripts/: build.sh  install_realsense.sh  install_webrtc.sh  install_webrtc_deps.sh  quick_test.sh  run.sh  setup.sh  setup_all.sh
signaling_server/: README.md  requirements.txt  server.py  start.sh  test_server.py
src/: config_parser.cpp  custom_video_source.cpp  h265_decoder.cpp  h265_encoder.cpp  main.cpp  opencv_source.cpp  realsense_source.cpp  video_source.cpp  webrtc_client.cpp  webrtc_client_native.cpp
test/: install_deps.sh  receiver_demo.py  requirements.txt
